--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">STT</string>
+    <string name="first_screen">First Screen</string>
+    <string name="navigate">Navigate</string>
+    <string name="second_screen">Second Screen</string>
 </resources>
